--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,15 +3,15 @@
 kotlin = "1.9.0"
 #Androidx
 androidx-document-file = "1.0.1"
-androidx-exif-interface = "1.3.6"
+androidx-exif-interface = "1.3.7"
 androidx-lifecycle = "2.6.1"
-androidx-window = "1.2.0-beta01"
-androidx-camera = "1.3.0-beta02"
-androidx-ktx = "2.6.1"
+androidx-window = "1.3.0"
+androidx-camera = "1.3.4"
+androidx-ktx = "2.8.4"
 #Simple tools
 simple-commons = "73d78e5cd3"
 #Gradle
-gradlePlugins-agp = "8.5.1"
+gradlePlugins-agp = "8.5.2"
 #build
 app-build-compileSDKVersion = "34"
 app-build-targetSDK = "34"
