--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,16 @@
 [versions]
 #jetbrains
-kotlin = "1.9.0"
+kotlin = "1.9.25"
 #Detekt
 detekt = "1.23.3"
 #Androidx
 androidx-document-file = "1.0.1"
 androidx-exif-interface = "1.3.7"
-androidx-lifecycle = "2.6.1"
-androidx-window = "1.2.0-beta01"
-androidx-camera = "1.3.0-beta02"
-androidx-ktx = "2.6.1"
+androidx-window = "1.3.0"
+androidx-camera = "1.3.4"
+androidx-ktx = "2.8.6"
 #Fossify
-commons = "6500fc4111"
+commons = "54b78551a4"
 #Gradle
 gradlePlugins-agp = "8.6.1"
 #build
