--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,8 @@ org.gradle.configureondemand=true
 org.gradle.unsafe.configuration-cache=true
 org.gradle.unsafe.configuration-cache-problems=warn
 android.nonTransitiveRClass=true
+
+# Versioning
+VERSION_NAME=1.0.1
+VERSION_CODE=2
+APP_ID=org.fossify.camera
