--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -16,7 +16,7 @@ body:
       options:
         - label: "I made sure that there are **no existing issues** - [open](https://github.com/FossifyOrg/Camera/issues) or [closed](https://github.com/FossifyOrg/Camera/issues?q=is%3Aissue+is%3Aclosed) - to which I could contribute my information."
           required: true
-        - label: "I made sure that there are **no existing discussions** - [open](https://github.com/FossifyOrg/Camera/discussions) or [closed](https://github.com/FossifyOrg/Camera/discussions?discussions_q=is%3Aclosed) - to which I could contribute my information."
+        - label: "I made sure that there are **no existing discussions** - [open](https://github.com/orgs/FossifyOrg/discussions?discussions_q=is:open+label:camera) or [closed](https://github.com/orgs/FossifyOrg/discussions?discussions_q=is:closed+label:camera) - to which I could contribute my information."
           required: true
         - label: "I have read the FAQs inside the app (Menu -> About -> FAQs) and my problem isn't listed."
           required: true
